add: new repo and error notification
